# kstars-watchdog

./: README.md  kstars-watchdog-ssh.sh  kstars-watchdog.py  kstars-watchdog.sh  pyproject.toml
src/: kstars-watchdog.py
