[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kstars-watchdog"
version = "0.9"
description = "Restart automatically KStars and Ekos if the crash or are closed"
authors = [
  { name = "Eric Fournié", email = "efournie@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
  "pydbus>=0.6.0-12",
]

[project.urls]
"Homepage" = "https://github.com/efournie/kstars-watchdog"
"Bug Tracker" = "https://github.com/efournie/kstars-watchdog/issues"
